creando menu de navegacion

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,8 +1,14 @@
 /* --------------------------------------------
    * COLORS
 -------------------------------------------- */
-
-
+$color-primary-one: #6705c6;
+$color-primary-two: #2936c3;
+$color-primary-three: #1cdccd;
+$color-primary-four: #13f3f0;
+$color-primary-five: #02b6ff;
+$color-primary-six: #d4fcf4;
+$color-primary-seven: #3ba1ad;
+$color-primary-eight: #015759;
 
 /* --------------------------------------------
    * FONTS
