--- a/src/components/navigation/style.scss
+++ b/src/components/navigation/style.scss
@@ -1,6 +1,25 @@
-.navLogo {
+@import "../../variables";
+
+.navigation {
   display: flex;
-  img {
-    width: 95%;
+  width: 100%;
+  background-color: #ffffff;
+  box-shadow: 2px 2px 5px #f1f1f1;
+  position: relative;
+}
+
+.navItems {
+  display: flex;
+  justify-content: center;
+  ul {
+    display: flex;
+  }
+  li {
+    list-style: none;
+    padding: 0 10px;
+  }
+  a {
+    color: #333333;
+    text-decoration: none;
   }
 }
