terminando el diseno de la barra de navegacion

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -30,5 +30,5 @@ $color-primary-eight: #015759;
 $font-lato: "Lato";
 $font-Roboto: "Roboto";
 
-$font-family-default: "Lato", "segoe UI", "Roboto", sans-serif;
+$font-family-default: "Roboto", "segoe UI", "Lato", sans-serif;
 $code-font-family-default: "Cascadia Code Pl", "Cascadia Code", "lato", "roboto";
