--- a/src/components/navigation/style.scss
+++ b/src/components/navigation/style.scss
@@ -7,31 +7,46 @@
   box-shadow: 2px 2px 5px #f1f1f1;
   position: sticky;
   top: 0;
-  .navLeft {
+  nav {
     display: flex;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
     align-content: center;
-    padding: 0;
-    margin: 0;
-    .navigationNavLogo {
-      display: flex;
-    }
+    align-self: center;
+  }
+  .navigationSeeker {
+    width: 50%;
+  }
+  .navigationUserStatus {
+    display: flex;
+    justify-content: right;
+    float: right;
   }
 }
 
 .navItems {
   display: flex;
   justify-content: center;
+  align-items: center;
+
   ul {
     display: flex;
-  }
-  li {
-    list-style: none;
-    padding: 0 10px;
-  }
-  a {
-    color: #333333;
-    text-decoration: none;
+    justify-content: center;
+    align-items: center;
+
+    li {
+      justify-content: center;
+      align-items: center;
+      list-style: none;
+      margin: 0 10px;
+
+      a {
+        justify-content: center;
+        align-items: center;
+        color: #333333;
+        text-decoration: none;
+        margin: 0;
+      }
+    }
   }
 }
