--- a/src/components/navigation/style.scss
+++ b/src/components/navigation/style.scss
@@ -40,6 +40,10 @@
       list-style: none;
       margin: 0 10px;
 
+      ul {
+        display: none;
+      }
+
       a {
         justify-content: center;
         align-items: center;
