agregando props a todo el menu de navegacion

--- a/src/components/navigation/style.scss
+++ b/src/components/navigation/style.scss
@@ -1,22 +1,23 @@
 @import "../../variables";
 
-.navigation {
+#Navigation {
   display: flex;
   width: 100%;
+  min-height: 20px;
+  max-height: 100px;
   background-color: #ffffff;
   box-shadow: 2px 2px 5px #f1f1f1;
   position: sticky;
   top: 0;
-  .navLeft {
+  nav {
     display: flex;
+    width: 100%;
+    height: 100%;
     justify-content: left;
     align-items: center;
     align-content: center;
     padding: 0;
     margin: 0;
-    .navigationNavLogo {
-      display: flex;
-    }
   }
 }
 
