CU-20yjwk - crear variables espaciado botones

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -114,6 +114,14 @@ $spacing-seventy-two: 72px;
 $spacing-eighty: 80px;
 
 /* --------------------------------------------
+   * Spacing buttons
+-------------------------------------------- */
+$spacing-super-big-button: 25px;
+$spacing-big-button: 22px;
+$spacing-semi-middle-button: 18px;
+$spacing-small-button: 12px;
+
+/* --------------------------------------------
    * Shades
 -------------------------------------------- */
 //shadows without material
