corrected variable semantics and associated figma style names

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,140 +1,140 @@
 /* --------------------------------------------
    * COLORS
 -------------------------------------------- */
-$cPrimary: #6705c6; // Color primary
-$cSOne: #13f3f0; // Color Secondary one
-$cSTwo: #02b6ff; // Color secondary two
-$cTertiary: #f6f5f5; // Color tertiary
-$cEGreen: #40b218; // Color enfasis green
-$cERed: #f44336; // Color enfasis red
-$cEYellow: #ffc107; // Color enfasis yellow
-$cEPurple: #88317a; // Color enfasis purple
-$dColor: #2c312d; //Dark Color
+$pColor: #6705c6; // Name in Figma: Primary Color 500
+$sColor: #13f3f0; // Name in Figma: Secondary Color 1 500
+$sCTwo: #02b6ff; // Name in Figma: Secondary Color 2  500
+$tColor: #f6f5f5; // Name in Figma:  Tertiary Color 500
+$aGColor: #40b218; // Name in Figma: Accent Color Green 500
+$aRColor: #f44336; // Name in Figma: Accent Red Color 500
+$aYColor: #ffc107; // Name in Figma: Accent Yellow Color 500
+$aPColor: #88317a; // Name in Figma:  Accent Purple Color 500
+$dColor: #2c312d; //Name in Figma: Dark color 500
 
 //**********************************
 
 // Color primary light
-$cPOne: #ecdafe;
-$cPTwo: #c68ffc;
-$cPThree: #b369fb;
-$cPFour: #8e1ef9;
+$pCOne: #ecdafe; //Name in Figma: Primary Color 100
+$pCTwo: #c68ffc; //Name in Figma: Primary Color 200
+$pCThree: #b369fb; //Name in Figma: Primary Color 300
+$pCFour: #8e1ef9; //Name in Figma: Primary Color 400
 
 // color Primary dark
-$cPSix: #4d0495;
-$cPSeven: #40037c;
-$cPEight: #40037c;
-$cPNine: #27024a;
+$pCSix: #4d0495; //Name in Figma: Primary Color 600
+$pCSeven: #40037c; //Name in Figma: Primary Color 700
+$pCEight: #40037c; //Name in Figma: Primary Color 800
+$pCNine: #27024a; //Name in Figma: Primary Color 900
 
 //**********************************
 
 // Colors secondary's light
-$cSOneOne: #e2fefd;
-$cSTwo: #c4fcfb;
-$cSoThree: #89f9f8;
-$cSoFour: #4ef6f4;
+$sCoOne: #e2fefd; //Name in Figma: Secondary Color 1 - 100
+$sCoTwo: #c4fcfb; //Name in Figma: Secondary Color 1 - 200
+$sCoThree: #89f9f8; //Name in Figma: Secondary Color 1 - 300
+$sCoFour: #4ef6f4; //Name in Figma: Secondary Color 1 - 400
 
 // Colors secondary one light
-$cSoSix: #0bdad7;
-$cSoSeven: #089c9a;
-$cSoEight: #055d5c;
-$cSoNine: #033e3e;
+$sCoSix: #0bdad7; //Name in Figma: Secondary Color 1 - 600
+$sCoSeven: #089c9a; //Name in Figma: Secondary Color 1 - 700
+$sCoEight: #055d5c; //Name in Figma: Secondary Color 1 - 800
+$sCoNine: #033e3e; //Name in Figma: Secondary Color 1 - 900
 
 //**********************************
 
 // Colors secondary two light
-$cStOne: #dff6ff;
-$cStTwo: #c0edff;
-$cStThree: #81dbff;
-$cStFour: #41c8ff;
+$sCtOne: #dff6ff; //Name in Figma: Secondary Color 2 - 100
+$sCtTwo: #c0edff; //Name in Figma: Secondary Color 2 - 200
+$sCtThree: #81dbff; //Name in Figma: Secondary Color 2 - 300
+$sCtFour: #41c8ff; //Name in Figma: Secondary Color 2 - 400
 
 // Colors secondary two dark
-$cStSix: #0089c1;
-$cStSeven: #0072a1;
-$cStEight: #005b81;
-$cStNine: #004560;
-
-//**********************************
-
-// Light colors
-$dCOne: #e4e7e5;
-$dCTwo: #afb8b0;
-$dCThree: #7a887c;
-$dCFour: #4a534b;
-
-//dark colors
-$dCSix: #262a26;
-$dCSeven: #1f2320;
-$dCEight: #131513;
-$dCNine: #060706;
+$sCtSix: #0089c1; //Name in Figma: Secondary Color 2 - 600
+$sCtSeven: #0072a1; //Name in Figma: Secondary Color 2 - 700
+$sCtEight: #005b81; //Name in Figma: Secondary Color 2 - 800
+$sCtNine: #004560; //Name in Figma: Secondary Color 2 - 900
 
 //**********************************
 
 // Color tertiary light
-$cTOne: #ffffff;
-$cTTwo: #fcfbfb;
-$cTThree: #fbfafa;
-$cTFour: #f8f8f8;
+$tCOne: #ffffff; //Name in Figma: Tertiary Color 100
+$tCTwo: #fcfbfb; //Name in Figma: Tertiary Color 200
+$tCThree: #fbfafa; //Name in Figma: Tertiary Color 300
+$tCFour: #f8f8f8; //Name in Figma: Tertiary Color 400
 
 // Color tertiary dark
-$cTFive: #d9d5d5;
-$cTSix: #bcb4b4;
-$cTEight: #9f9494;
-$cTNine: #817474;
+$tCSix: #d9d5d5; //Name in Figma: Tertiary Color 600
+$tCSeven: #bcb4b4; //Name in Figma: Tertiary Color 700
+$tCEight: #9f9494; //Name in Figma: Tertiary Color 800
+$tCNine: #817474; //Name in Figma: Tertiary Color 900
 
 //**********************************
 
 // Color enfasis green light
-$cEgOne: #e5fadd;
-$cEgTwo: #caf6bb;
-$cEgThree: #96ed77;
-$cEgFour: #61e433;
+$aCgOne: #e5fadd; //Name in Figma:  Accent Color 1 - 100
+$aCgTwo: #caf6bb; //Name in Figma:  Accent Color 1 - 200
+$aCgThree: #96ed77; //Name in Figma:  Accent Color 1 - 300
+$aCgFour: #61e433; //Name in Figma:  Accent Color 1 - 400
 
 // Color enfasis green dark
-$cEgSix: #308512;
-$cEgSeven: #20590c;
-$cEgEight: #184309;
-$cEgNine: #102c06;
+$aCgSix: #308512; //Name in Figma:  Accent Color 1 - 600
+$aCgSeven: #20590c; //Name in Figma:  Accent Color 1 - 700
+$aCgEight: #184309; //Name in Figma:  Accent Color 1 - 800
+$aCgNine: #102c06; //Name in Figma:  Accent Color 1 - 900
 
 //**********************************
 
 // Color enfasis red light
-$cErOne: #fcd0cd;
-$cErTwo: #faa19b;
-$cErThree: #f77268;
+$aCrTwo: #fcd0cd; //Name in Figma:  Accent Color 2 - 200
+$aCrThree: #faa19b; //Name in Figma:  Accent Color 2 - 300
+$aCrFour: #f77268; //Name in Figma:  Accent Color 2 - 400
 
 // Color enfasis green dark
-$cErFive: #d4190c;
-$cErSix: #8d1108;
-$cErSeven: #6a0d06;
-$cErEight: #470804;
+$aCrSix: #d4190c; //Name in Figma:  Accent Color 2 - 600
+$aCrSeven: #8d1108; //Name in Figma:  Accent Color 2 - 700
+$aCrEight: #6a0d06; //Name in Figma:  Accent Color 2 - 800
+$aCrNine: #470804; //Name in Figma:  Accent Color 2 - 900
 
 //**********************************
 
 // Color enfasis yellow light
-$cEyOne: #fff7e0;
-$cEyTwo: #fff0c1;
-$cEyThree: #ffe083;
-$cEyFour: #ffd145;
+$aCyOne: #fff7e0; //Name in Figma:  Accent Color 3 - 100
+$aCyTwo: #fff0c1; //Name in Figma:  Accent Color 3 - 200
+$aCyThree: #ffe083; //Name in Figma:  Accent Color 3 - 300
+$aCyFour: #ffd145; //Name in Figma:  Accent Color 3 - 400
 
 // Color enfasis green dark
-$cEySix: #c59300;
-$cEySeven: #836200;
-$cEyEight: #624a00;
-$cEyNine: #423100;
+$aCySix: #c59300; //Name in Figma:  Accent Color 3 - 600
+$aCySeven: #836200; //Name in Figma:  Accent Color 3 - 700
+$aCyEight: #624a00; //Name in Figma:  Accent Color 3 - 800
+$aCyNine: #423100; //Name in Figma:  Accent Color 3 - 900
 
 //**********************************
 
 // Color enfasis purple light
-$cEpOne: #f4e1f1;
-$cEpTwo: #e9c3e3;
-$cEpThree: #d487c8;
-$cEpFour: #be4cac;
+$aCpOne: #f4e1f1; //Name in Figma:  Accent Color 4 - 100
+$aCpTwo: #e9c3e3; //Name in Figma:  Accent Color 4 - 200
+$aCpThree: #d487c8; //Name in Figma:  Accent Color 4 - 300
+$aCpFour: #be4cac; //Name in Figma:  Accent Color 4 - 400
 
 // Color enfasis purple dark
-$cEpSix: #66255c;
-$cEpSeven: #44183d;
-$cEpEight: #33122e;
-$cEpNine: #220c1f;
+$aCpSix: #66255c; //Name in Figma:  Accent Color 4 - 600
+$aCpSeven: #44183d; //Name in Figma:  Accent Color 4 - 700
+$aCpEight: #33122e; //Name in Figma:  Accent Color 4 - 800
+$aCpNine: #220c1f; //Name in Figma:  Accent Color 4 - 900
+
+//**********************************
+
+// Light colors
+$dCOne: #e4e7e5; //Name in Figma: Dark color 100
+$dCTwo: #afb8b0; //Name in Figma: Dark color 200
+$dCThree: #7a887c; //Name in Figma: Dark color 300
+$dCFour: #4a534b; //Name in Figma: Dark color 400
+
+//dark colors
+$dCSix: #262a26; //Name in Figma: Dark color 600
+$dCSeven: #1f2320; //Name in Figma: Dark color 700
+$dCEight: #131513; //Name in Figma: Dark color 800
+$dCNine: #060706; //Name in Figma: Dark color 900
 
 /* --------------------------------------------
    * Spacing variables
