Solved all bugs and created the SCSS stylesheet of the html searcher element using our global variables

--- a/templates/searcher-nav/index.html
+++ b/templates/searcher-nav/index.html
@@ -7,13 +7,16 @@
 
     <!-- Css -->
     <link rel="stylesheet" href="style.css" />
+
+    <!-- Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
   </head>
   <body>
     <div class="searcher">
-      <img
-      class="searcher-image"
-        src="data:image/svg+xml,%3Csvg width='25' height='25' viewBox='0 0 25 25' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M15.7441 9.09765C15.7441 12.9779 12.5548 16.1514 8.58595 16.1514C4.61705 16.1514 1.42781 12.9779 1.42781 9.09765C1.42781 5.21744 4.61705 2.0439 8.58595 2.0439C12.5548 2.0439 15.7441 5.21744 15.7441 9.09765Z' stroke='%23D9D5D5' stroke-width='2.6608'/%3E%3Cpath d='M13.2142 14.2448C13.6582 13.8063 14.3673 13.7741 14.8502 14.1705L22.9686 20.8354C23.5745 21.3328 23.6166 22.2369 23.0595 22.7871L22.1127 23.7222C21.5682 24.26 20.6777 24.2343 20.1659 23.666L13.1654 15.8912C12.7377 15.4162 12.7591 14.6943 13.2142 14.2448Z' fill='%23D9D5D5'/%3E%3C/svg%3E"
-      />
+      <span class="searcher-image material-icons">
+        search
+        </span>
       <input
         class="searcher-input"
         type="search"
