completely creating the 404 error page

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-  font-family: $font-family-default;
+  font-family: "segoe UI";
   font-size: 100%;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
@@ -10,5 +10,5 @@ body {
 }
 
 code {
-  font-family: $code-font-family-default;
+  font-family: sans-serif;
 }
