fixing the ArrowForwardIosIcon class and creating it

--- a/src/routes/PageNotFound/style.scss
+++ b/src/routes/PageNotFound/style.scss
@@ -34,8 +34,8 @@
     font-size: 1.2rem;
     align-items: center;
   }
-  ArrowForwardIosIcon {
-    height: 1rem;
+  .ArrowForwardIosIcon {
+    height: 1.1rem;
     align-items: center;
   }
 }
