--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -226,7 +226,10 @@ $smallButtonLight: 12px;
 
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap"); // Import font 'Roboto Slab' from 'fonts.google.com - google fonts'
 
-@import "./assets/fonts/CascadiaCodePL.ttf";
+@font-face {
+  font-family: "Cascadia Code PL";
+  src: url(./assets/fonts/CascadiaCodePL.ttf);
+}
 
 // typography titles and body
 $titleFont: "Source Sans Pro", "Lato";
@@ -234,4 +237,4 @@ $bodyFont: "Roboto", "Roboto Slab";
 
 $fontDefault: "Roboto", "Source Sans Pro", "segoe UI", "Lato", sans-serif;
 
-$fontCodeDeafult: "Cascadia Code Pl", sans-serif;
+$fontCodeDefault: "Cascadia Code Pl", sans-serif;
